# Senegal

./: CMakeLists.txt
libs/: scurseslib.c
libs/includes/: scurseslib.h
src/: main.c
